Restructure twig templates, assets, and other config files

--- a/assets/scss/modules/_all.scss
+++ b/assets/scss/modules/_all.scss
@@ -1,4 +1,6 @@
 @import "blocks/all";
-@import "components/all";
+@import "buttons";
+@import "blocks";
+@import "containers";
 @import "navigation";
 @import "footer";
