--- a/templates/helpers/image.twig
+++ b/templates/helpers/image.twig
@@ -1,89 +1,112 @@
 {% macro cropped(image, options) %}
-    {% if options is defined %}
-        {% set dimensions = {
-            mode: 'crop',
-            width: options.width,
-            height: options.height,
-            quality: options.quality ?? 100,
-            position: 'center-center'
-        } %}
+  {% spaceless %}
+    {% if image %}
+      {% set defaults = {
+        quality: 100,
+        class: '',
+        attrs: '',
+      } %}
 
-        {% set attrs = '' %}
+      {% set options = defaults|merge(options) %}
 
-        {% if options.attrs is defined %}
-            {% set attrs = options.attrs %}
-        {% endif %}
-        <img class="img" src="{{ image.getUrl(dimensions) }}" alt="{{ image.altText }}" {{ attrs }}>
-    {% else %}
-        <img class="img" src="{{ image.url }}" alt="{{ image.altText }}">
+      {% set dimensions = {
+        mode: 'crop',
+        width: options.width,
+        height: options.height,
+        quality: options.quality,
+        position: 'center-center'
+      } %}
+
+      <img
+        class="{{ options.class }}"
+        src="{{ image.getUrl(dimensions) }}"
+        alt="{{ image.altText ?? image.title }}"
+        {{ options.attrs }}
+      >
     {% endif %}
+  {% endspaceless %}
+{% endmacro %}
+
+
+{% macro fit(image, options) %}
+  {% spaceless %}
+    {% if image %}
+      {% set defaults = {
+        quality: 100,
+        class: '',
+        attrs: '',
+      } %}
+
+      {% set options = defaults|merge(options) %}
+
+      {% if options.width is defined %}
+        {% set dimensions = {
+          mode: 'fit',
+          width: options.width
+        } %}
+      {% elseif options.height is defined %}
+        {% set dimensions = {
+          mode: 'fit',
+          height: options.height
+        } %}
+      {% endif %}
+
+      <img
+        class="{{ options.class }}"
+        src="{{ image.getUrl(dimensions) }}"
+        alt="{{ image.altText ?? image.title }}"
+        {{ options.attrs }}
+      >
+    {% endif %}
+  {% endspaceless %}
 {% endmacro %}
 
 {% macro backgroundCropped(image, options) %}
-    {% if options is defined %}
-        {% set dimensions = {
-            mode: 'crop',
-            width: options.width,
-            height: options.height,
-            quality: options.quality ?? 100,
-            position: 'center-center'
-        } %}
+  {% spaceless %}
+    {% if image %}
+      {% set defaults = {
+        quality: 100,
+        styles: '',
+      } %}
 
-        {% set styles = '' %}
+      {% set options = defaults|merge(options) %}
 
-        {% if options.additionalStyles is defined %}
-            {% set styles = ' ' ~ options.additionalStyles %}
-        {% endif %}
-        style="background-image: url('{{ image.getUrl(dimensions) }}');{{ styles }}"
-    {% else %}
-        style="background-image: url('{{ image.url }}');"
+      {% set dimensions = {
+        mode: 'crop',
+        width: options.width,
+        height: options.height,
+        quality: options.quality,
+        position: 'center-center'
+      } %}
+
+      style="background-image: url('{{ image.getUrl(dimensions) }}');{{ options.styles }}"
     {% endif %}
+  {% endspaceless %}
 {% endmacro %}
 
 {% macro backgroundFit(image, options) %}
+  {% spaceless %}
     {% if image %}
-        {% if options is defined %}
-            {% set styles = '' %}
+      {% set defaults = {
+        quality: 100,
+        styles: '',
+      } %}
 
-            {% if options.additionalStyles is defined %}
-                {% set styles = ' ' ~ options.additionalStyles %}
-            {% endif %}
+      {% set options = defaults|merge(options) %}
 
-            {% if options.width is defined %}
-                {% set dimensions = {
-                    mode: 'fit',
-                    width: options.width
-                } %}
-            {% elseif options.height is defined %}
-                {% set dimensions = {
-                    mode: 'fit',
-                    height: options.height
-                } %}
-            {% endif %}
-            style="background-image: url('{{ image.getUrl(dimensions) }}');{{ styles }}"
-        {% else %}
-            style="background-image: url('{{ image.url }}');"
-        {% endif %}
+      {% if options.width is defined %}
+        {% set dimensions = {
+          mode: 'fit',
+          width: options.width
+        } %}
+      {% elseif options.height is defined %}
+        {% set dimensions = {
+          mode: 'fit',
+          height: options.height
+        } %}
+      {% endif %}
+
+      style="background-image: url('{{ image.getUrl(dimensions) }}');{{ options.styles }}"
     {% endif %}
-{% endmacro %}
-
-{% macro fit(image, options) %}
-    {% if image %}
-        {% if options is defined %}
-            {% if options.width is defined %}
-                {% set dimensions = {
-                    mode: 'fit',
-                    width: options.width
-                } %}
-            {% elseif options.height is defined %}
-                {% set dimensions = {
-                    mode: 'fit',
-                    height: options.height
-                } %}
-            {% endif %}
-            <img class="img" src="{{ image.getUrl(dimensions) }}" alt="{{ image.altText }}">
-        {% else %}
-            <img class="img" src="{{ image.url }}" alt="{{ image.altText }}">
-        {% endif %}
-    {% endif %}
+  {% endspaceless %}
 {% endmacro %}
