--- a/assets/scss/base/global.scss
+++ b/assets/scss/base/global.scss
@@ -3,13 +3,15 @@ html {
     font-size: 62.5%;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 body {
     font-size: 1.6rem;
-}
-
-
-[v-cloak] {
-    display: none !important;
 }
