--- a/assets/scss/utils/mixins.scss
+++ b/assets/scss/utils/mixins.scss
@@ -88,3 +88,31 @@
         font-size: $max-size;
     }
 }
+
+@mixin responsive-line-height($options) {
+    $min-size: map-get($options, min-size);
+    $max-size: map-get($options, max-size);
+    $lower-bound: map-get($options, lower-bound);
+    $upper-bound: map-get($options, upper-bound);
+
+    $max-minus-min: strip-unit($max-size) - strip-unit($min-size);
+
+    @if(index('rem', unit($min-size)) != null and index('rem', unit($max-size)) != null) {
+        $base-rem: 10;
+        $upper-minus-lower: strip-unit($upper-bound / $base-rem) - strip-unit($lower-bound / $base-rem);
+        $lower-bound-rems: #{strip-unit($lower-bound / $base-rem)}rem;
+
+        line-height: calc(#{$min-size} + #{$max-minus-min} * ((100vw - #{$lower-bound-rems}) / #{$upper-minus-lower}));
+    } @else {
+        $upper-minus-lower: strip-unit($upper-bound) - strip-unit($lower-bound);
+        line-height: calc(#{$min-size} + #{$max-minus-min} * ((100vw - #{$lower-bound}) / #{$upper-minus-lower}));
+    }
+
+    @include mq-below($lower-bound) {
+        line-height: $min-size;
+    }
+
+    @include mq-above($upper-bound) {
+        line-height: $max-size;
+    }
+}
