--- a/templates/modules/blocks/_index.twig
+++ b/templates/modules/blocks/_index.twig
@@ -1,3 +1,3 @@
 {% for block in entry.blocks.level(1).all() %}
-    {% include ['modules/blocks/' ~ block.type, 'modules/blocks/noBlock.html'] with { block: block } %}
+  {% include ['modules/blocks/' ~ block.type, 'modules/blocks/noBlock.twig'] with { block: block } %}
 {% endfor %}
