Fix errors with codeblocks

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -1,4 +1,4 @@
-{% set codeBlocks = globalCode.codeBlocks.all() %}
+{#{% set codeBlocks = globalCode.codeBlocks.all() %}#}
 {% set devMode = craft.app.config.general.devMode ? 'true' : 'false' %}
 <!DOCTYPE html>
 <html lang="en">
