Pass parent through in sharedBlocks

--- a/templates/modules/blocks/sharedBlock.twig
+++ b/templates/modules/blocks/sharedBlock.twig
@@ -1,4 +1,6 @@
-{% set blocks = block.sharedBlock.one().blocks.level(1).all() %}
+{% set parent = block %}
+
+{% set blocks = parent.sharedBlock.one().blocks.level(1).all() %}
 {% for block in blocks %}
-  {% include ['modules/blocks/' ~ block.type, 'modules/blocks/noBlock.twig'] with { block: block } %}
+  {% include ['modules/blocks/' ~ block.type, 'modules/blocks/noBlock.twig'] with { block: block, parent: parent } %}
 {% endfor %}
