--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,15 +1,38 @@
 @charset "UTF-8";
 
+@custom-selector :--headings h1, h2, h3, h4, h5, h6;
+
 html {
+    @apply antialiased bg-white;
+    font-size: 16px;
     text-rendering: geometricPrecision;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+
+    @screen sm {
+        font-size: 18px;
+    }
 }
 
 body {
-    @apply text-gray-800;
+    @apply bg-white text-gray-900;
+
+    & :--headings {
+
+    }
+
+    & img {
+        @apply select-none;
+    }
+
+    & a {
+        @apply font-bold;
+    }
 }
 
-img {
-    @apply select-none;
+#skip-to-content:not(:focus) {
+    @apply sr-only;
+}
+
+.appearance-none {
+    -moz-appearance: none;
+    appearance: none;
 }
