--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,6 +1,6 @@
 {% extends 'layouts/_main' %}
 
-{# Starter Welcome Screen for MS Craft - Feel free to scrap contents of main block below #}
+{# Starter Welcome Screen for MS Craft - Feel free to scrap this file #}
 {% block main %}
     <div class="p-4 min-h-vh-100 flex">
         <div class="pb-40 m-auto w-full max-w-3xl text-center">
