--- a/src/css/components/video.css
+++ b/src/css/components/video.css
@@ -1,28 +1,30 @@
-.video {
-    position: relative;
-    clear: both;
-
-    &::before {
-        content: " ";
-        display: block;
-        float: left;
-        width: 100%;
-        padding-top: calc(9/16 * 100%);
-    }
-
-    &::after {
-        content: " ";
-        display: table;
+@layer components {
+    .video {
+        position: relative;
         clear: both;
-    }
 
-    & iframe {
-        position: absolute;
-        top: 0;
-        right: 0;
-        right: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
+        &::before {
+            content: " ";
+            display: block;
+            float: left;
+            width: 100%;
+            padding-top: calc(9/16 * 100%);
+        }
+
+        &::after {
+            content: " ";
+            display: table;
+            clear: both;
+        }
+
+        & iframe {
+            position: absolute;
+            top: 0;
+            right: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
