--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -1,12 +1,6 @@
-@charset "UTF-8";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-    x-timestamp: theme("timestamp");
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 @layer utilities {
     .appearance-none {
