--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,22 +2,27 @@
 
 @import "utilities";
 @import "components/button";
-@import "components/container";
 @import "components/navbar";
 @import "components/video";
 @import "components/wysiwyg";
 
-@custom-selector :--headings h1, h2, h3, h4, h5, h6;
+@custom-selector :--headings :is(h1, h2, h3, h4, h5, h6);
 
 @layer base {
+    :root {
+        --parallax-perspective: 100vh;
+        --parallax-control: 0;
+        --parallax-x: 0px;
+        --parallax-y: 0px;
+        --parallax-z: 0px;
+    }
+
     html {
         @apply antialiased bg-white;
         font-size: 16px;
         text-rendering: geometricPrecision;
-
-        @screen sm {
-            font-size: 18px;
-        }
+        scroll-behavior: smooth;
+        scroll-padding: calc(var(--navbar-height) + 2rem) 4rem 2rem;
     }
 
     body {
@@ -40,11 +45,19 @@
             @apply outline-none;
         }
 
-        &.is-tabbing {
-            & .focusable:focus,
-            & [tabindex="0"]:focus {
-                @apply outline-none ring-2 ring-brand-orange rounded;
-            }
+        & hr {
+            @apply border-none;
+        }
+
+        &.is-tabbing :is(a, button, input, select, textarea, [tabindex="0"], .focusable):focus {
+            @apply outline-none ring-2 ring-blue-500 rounded;
+        }
+
+        [type="search"]::-webkit-search-decoration,
+        [type="search"]::-webkit-search-cancel-button,
+        [type="search"]::-webkit-search-results-button,
+        [type="search"]::-webkit-search-results-decoration {
+            @apply hidden;
         }
 
         & x-svelte {
