--- a/templates/layouts/_base.twig
+++ b/templates/layouts/_base.twig
@@ -1,18 +1,17 @@
 {% set codeBlocks = (code ?? null) and (code.codeBlocks ?? null) ? code.codeBlocks.all : [] %}
 <!DOCTYPE html>
-<html style="max-height: var(--viewport-height);" lang="en">
+<html style="max-height: var(--viewport-height); --viewport-height: 100vh;" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    {# <link rel="preconnect" href="https://source.imgix.net" > #}
+    <link rel="preconnect" href="{{ getenv("IMGIX_URL") }}" >
     {# <link rel="preconnect" href="https://use.typekit.net" > #}
     {# <link rel="preconnect" href="https://p.typekit.net" > #}
 
-    {% block seo %}
+    {% block head %}
         {{ external('@webroot/static/favicon/markup.html')|striptags('<link><meta>')|raw }}
-        {% hook "seo" %}
     {% endblock %}
 
     {% set regex = '{bot|crawler|spider|crawling|google|baidu|bing|msn|duckduckbot|teoma|slurp|yandex|konqueror|facebookexternalhit|ia_archiver}' %}
@@ -47,11 +46,10 @@
             global.$app.csrfTokenValue = '{{ craft.app.request.csrfToken|raw }}';
             global.$app.cloudfrontUrl = '{{ getenv("AWS_CLOUDFRONT_URL") }}';
             global.$app.imgixUrl = '{{ getenv("IMGIX_URL") }}';
-            global.$app.devMode = {{ craft.app.config.general.devMode ? 'true' : 'false' }}
+            global.$app.devMode = {{ craft.app.config.general.devMode ? 'true' : 'false' }};
         })(window);
     </script>
 
-    {# <link rel="stylesheet" href="https://use.typekit.net/rqc4ywg.css"> #}
     {{ entry('app') }}
 
     {{ codeBlocks|filter(c => c.position == 'headBottom')|map(c => c.code)|join('\n\n')|raw }}
