✨ add module listing section to bootstrap

--- a/templates/pages/_index.twig
+++ b/templates/pages/_index.twig
@@ -1,5 +1,9 @@
 {% extends 'layouts/_main' %}
 
+{% if entry.section.handle|default(null) == 'moduleListing' and not currentUser %}
+    {% exit 404 %}
+{% endif %}
+
 {% block header %}
     {% include 'modules/_header' ignore missing with {
         block: entry.header.one
